--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,16 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
+    <groupId>com.ganesh.kasi</groupId>
+    <artifactId>learningspring</artifactId>
+    <version>1.0-SNAPSHOT</version>
+
     <!-- Shared version number properties -->
     <properties>
         <org.springframework.version>4.2.1.RELEASE</org.springframework.version>
     </properties>
 
-    <groupId>com.ganesh.kasi</groupId>
-    <artifactId>FirstSpringApp</artifactId>
-    <version>1.0-SNAPSHOT</version>
     <dependencies>
         <!--
             Core utilities used by other modules.
